--- a/content/resources/ocw_24900_lecture22_2022spr26.md
+++ b/content/resources/ocw_24900_lecture22_2022spr26.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/6QRlpk8ZmPI/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1UWqieveMr4b2mJWuWIM1Nxx4qoNL9r6p_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: negative polarity items, negative concord, AAE, AAVE, Ebonics, copula
     drop
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video discusses differences in how languages deal with negatives, and explains\
     \ some of the grammatical constraints that apply in African American English.\n\
