--- a/content/resources/ocw_24900_lecture05_2022feb15.md
+++ b/content/resources/ocw_24900_lecture05_2022feb15.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/xZ8mnJPu95Q/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1rniZ0KvzFxjTzFGIkyO5la1Kz3E6WgHY_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: articulation, voicing, stops, fricative, vowel, consonant, bilabial,
     velar, glottal, palatal, nasal
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video introduces the basic vocabulary used in discussing the sounds of\
     \ speech.\n\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
