--- a/content/resources/ocw_24900_lecture17_2022apr07.md
+++ b/content/resources/ocw_24900_lecture17_2022apr07.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/Di8e2opeGA0/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1MptwG2vU-HESQLFjTdgVvgS2K4ys2QJY_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: wh-islands, compositionality, intension, extension, entailment, implicature,
     presupposition
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video concludes the discussion of syntax and begins the examination of\
     \ semantics.\n\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
