--- a/content/resources/ocw_24900_lecture12_2022mar15.md
+++ b/content/resources/ocw_24900_lecture12_2022mar15.md
@@ -19,10 +19,10 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/-OeyjP2zri4/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1q19CKqBXkYc1Zd9ak_IanfaZYPlTjOJ7_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: recursion, competence, ambiguity, node, sister, mother, constituent
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video demonstrates how syntactic trees are used to show the structure of\
     \ sentences.\n\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
