--- a/content/resources/ocw_24900_lecture26_2022may10.md
+++ b/content/resources/ocw_24900_lecture26_2022may10.md
@@ -19,10 +19,10 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/12UWP2ZhUl0/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1b7TZWEkidhukCE_FYZbnFFTFahpMjnuk_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: sign language, ASL, minimal word requirement, loci, role shift
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video deals with the linguistic aspects of signed rather than spoken languages.\n\
     \nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
