--- a/content/resources/ocw_24900_lecture11_2022mar10.md
+++ b/content/resources/ocw_24900_lecture11_2022mar10.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/q7pPG7V2ack/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/15OsasEW2g-fPtnYqQyvkcaaoJYNTw_ou_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: syntax, constituent, topicalization, coordination, clefting, verb phrase,
     prepositional phrase
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video introduces the fundamentals of how words are put together to form\
     \ sentences.\n\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
