--- a/content/resources/ocw_24900_lecture03_2022feb08.md
+++ b/content/resources/ocw_24900_lecture03_2022feb08.md
@@ -19,10 +19,10 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/NfD6QNY6Zzg/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/12ChuriW0Xo9h4IDLLgPipRkMt-0F4IsW_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: morphemes, bound morphemes, free morphemes, allomorphs, Merge, plurals
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video discusses the forms morphemes can take, and how morphemes are combined\
     \ to make words.\n\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
