--- a/content/resources/ocw_24900_lecture24_2022may03.md
+++ b/content/resources/ocw_24900_lecture24_2022may03.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/LOsNklq-dH8/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1DbBdWkispOb6VReTZ7KCoYhQ3gTO1_6C_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: Wampanoag, indigenous languages, Eliot Bible, lexicography, language
     immersion
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video describes the efforts to revive the Wampanoag language, and the ways\
     \ historical documents can be used to reconstruct the grammar of an extinct language.\n\
