--- a/content/resources/ocw_24900_lecture10_2022mar08.md
+++ b/content/resources/ocw_24900_lecture10_2022mar08.md
@@ -19,10 +19,10 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/qb1U3_Q-7o8/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1qrLzq7wII0saS3YIZTqp0YusgM1HH7vQ_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: assimilation, vowel harmony, ranked constraints, syllable weight
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video discusses language-specific rules for accent placement and other\
     \ phonological features.\n\nLicense: Creative Commons BY-NC-SA\nMore information\
