--- a/content/resources/ocw_24900_lecture09_2022mar03.md
+++ b/content/resources/ocw_24900_lecture09_2022mar03.md
@@ -19,10 +19,10 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/-Pg11JHzUTo/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1qZpCWDnGS-YUqutMXAzxO3hMJL3cfJp9_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: accent, compounds, phonotactics, devoicing, assimilation
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video discusses phonology and phonotactics in Japanese, English, and Arabic.\n\
     \nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
