--- a/content/resources/ocw_24900_lecture06_2022feb17.md
+++ b/content/resources/ocw_24900_lecture06_2022feb17.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/NVQWWXhbUvs/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1F5sIWDCAb3mso5C7oRJ_mV4IEQkBcneg_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: rounding, diphthongs, McGurk effect, open vowels, close vowels, front
     vowels, back vowels
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video presents more information on speech sounds, especially vowels. [Note:\
     \ No video is available for Lecture 7.]\n\nLicense: Creative Commons BY-NC-SA\n\
