--- a/content/resources/mit24_600s22_lec9.md
+++ b/content/resources/mit24_600s22_lec9.md
@@ -3,7 +3,7 @@ body: ''
 content_type: resource
 description: This PDF contains lecture notes from *24.900 Introduction to Linguistics*,
   taught by Prof. Norvin W. Richards.
-draft: false
+draft: true
 file: /courses/24-900-introduction-to-linguistics-spring-2022/mit24_600s22_lec9.pdf
 file_type: application/pdf
 image_metadata:
